Fix profile on mobile

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -403,4 +403,8 @@ p {
     #join-btn {
         font-size: 0.9em;
     }
+
+    .reminder {
+        width: 80%;
+    }
 }
